Feat/account activation (#939)
* test: Added recipientPublicKey send Message Text

* Added account activation action on accounts table

* Added activation button, and some (not all) translations

* Added activation for new accounts, and completed transalation

* Updated Change log

* uncommented condition for activation message

* Configure activator for main net

* Added working testnet url

* removed welcome message

--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -12,6 +12,9 @@
   "account_qr_code": "Codi QR del compte",
   "accounts": "Accounts",
   "actions": "Accions",
+  "activate": "Activa",
+  "activation_failed": "L'activació ha fallat:",
+  "activation_success": "S'ha sol·licitat l'activació amb èxit. El vostre compte s’activarà en pocs moments.",
   "add_answer": "Afegir una resposta",
   "add_as_contact": "Afegir com a contacte",
   "add_asset": "Afegir actiu",
@@ -632,7 +635,8 @@
   "no_polls_found": "No s'han trobat enquestes.",
   "no_products_found": "No s'han trobat articles.",
   "no_products_listed_yet": "Encara no heu possat cap producte a la venta",
-  "no_public_key_warning": "Alerta!: el vostre compte no té una clau pública! Això significa que no està tan protegida com altres comptes. Hi heu de fer una transacció per solucionar aquest problema.",
+  "no_public_key_activate": "Aquest compte encara no està activat. Feu clic per activar i protegir el vostre compte.",
+  "no_public_key_warning": "Avís: el vostre compte no té clau pública. Això vol dir que no està tan protegit com altres comptes. Activeu el vostre compte per obtenir la vostra clau pública.",
   "no_purchased_products_found": "No s'han trobat productes adquirits.",
   "no_sell_orders_for_asset": "No hi ha ordres de venta para aquest actiu.",
   "no_trade_history": "Historial de comerç no disponible.",
@@ -997,7 +1001,6 @@
   "warning": "Avís",
   "website": "Pàgina Web",
   "website_or_text": "Pàgina Web o Text",
-  "welcome_to_burst": "Benvinguts a burst!",
   "with_burst": "Amb burst",
   "wrong_pin": "PIN incorrecte",
   "x_confirmations": "__x__ confirmacions",
