--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -12,6 +12,9 @@
   "account_qr_code": "Κώδικας QR λογαριασμού",
   "accounts": "Accounts",
   "actions": "Ενέργειες",
+  "activate": "Θέτω εις ενέργειαν",
+  "activation_failed": "Η ενεργοποίηση απέτυχε:",
+  "activation_success": "Επιτυχής αιτούμενη ενεργοποίηση. Ο λογαριασμός σας θα ενεργοποιηθεί σε λίγα λεπτά.",
   "add_answer": "Προσθήκη απάντησης",
   "add_as_contact": "Προσθήκη ως επαφή",
   "add_asset": "Προσθήκη μετοχής",
@@ -632,7 +635,8 @@
   "no_polls_found": "No polls found.",
   "no_products_found": "No products found.",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
-  "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
+  "no_public_key_activate": "Αυτός ο λογαριασμός δεν έχει ενεργοποιηθεί ακόμα. Κάντε κλικ για να ενεργοποιήσετε και να ασφαλίσετε τον λογαριασμό σας.",
+  "no_public_key_warning": "Προειδοποίηση !: Ο λογαριασμός σας δεν έχει δημόσιο κλειδί! Αυτό σημαίνει ότι δεν είναι τόσο προστατευμένο όσο άλλοι λογαριασμοί. Ενεργοποιήστε το λογαριασμό σας για να αποκτήσετε το δημόσιο κλειδί σας.",
   "no_purchased_products_found": "No purchased products found.",
   "no_sell_orders_for_asset": "Δεν υπάρχουν εντολές πώλησης για τη συγκεκριμένη μετοχή.",
   "no_trade_history": "No trade history available.",
@@ -997,7 +1001,6 @@
   "warning": "προειδοποίηση",
   "website": "Ιστοσελίδα",
   "website_or_text": "Website or Text",
-  "welcome_to_burst": "Καλώς ήλθατε στο burst!",
   "with_burst": "Με burst",
   "wrong_pin": "Λάθος κωδικό PIN",
   "x_confirmations": "__x__ επιβεβαιώσεις",
