--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -12,6 +12,9 @@
   "account_qr_code": "Código QR de la Cuenta",
   "accounts": "Accounts",
   "actions": "Acciones",
+  "activate": "Activar",
+  "activation_failed": "Activación fallida:",
+  "activation_success": "Activación solicitada con éxito. Su cuenta se activará en unos momentos.",
   "add_answer": "Añadir respuesta",
   "add_as_contact": "Agregar como Contacto",
   "add_asset": "Añadir Activo",
@@ -632,7 +635,8 @@
   "no_polls_found": "No se han encontrado encuestas.",
   "no_products_found": "No se han encontrado artículos.",
   "no_products_listed_yet": "Aún no ha puesto ningún artículo en venta, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>añada uno.</a>",
-  "no_public_key_warning": "¡Aviso!: ¡Su cuenta no tiene clave pública! Esto significa que no está protegida como otras cuentas. Debe realizar una transacción de salida para arreglarlo.",
+  "no_public_key_activate": "Esta cuenta aún no está activada. Haga clic para activar y asegurar su cuenta.",
+  "no_public_key_warning": "¡Advertencia !: ¡Su cuenta no tiene una clave pública! Esto significa que no está tan protegido como otras cuentas. Active su cuenta para obtener su clave pública.",
   "no_purchased_products_found": "No se han encontrado artículos comprados.",
   "no_sell_orders_for_asset": "No hay órdenes de venta para este activo.",
   "no_trade_history": "No hay historial de operaciones disponible.",
@@ -997,7 +1001,6 @@
   "warning": "Aviso",
   "website": "Página Web",
   "website_or_text": "Sitio web o Texto",
-  "welcome_to_burst": "¡Bienvenido a Burst!",
   "with_burst": "Con BURST",
   "wrong_pin": "Pin erróneo",
   "x_confirmations": "__x__ confirmaciones",
