--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -12,6 +12,9 @@
   "account_qr_code": "QR code de ce compte",
   "accounts": "Accounts",
   "actions": "Actions",
+  "activate": "Activer",
+  "activation_failed": "Activation echouée:",
+  "activation_success": "Activation demandée avec succès. Votre compte sera activé dans quelques instants.",
   "add_answer": "Ajouter une réponse",
   "add_as_contact": "Ajouter comme contact",
   "add_asset": "Ajouter un actif",
@@ -632,7 +635,8 @@
   "no_polls_found": "Aucun sondage.",
   "no_products_found": "Aucun produit trouvé.",
   "no_products_listed_yet": "Vous n'avez aucun produit en vente pour le moment, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>ajoutez-en un.</a>",
-  "no_public_key_warning": "Attention ! : votre compte n'a pas de clef publique ! Cela signifie qu' il n'est pas aussi bien protégé que les autres comptes. Vous devez effectuer une transaction sortante pour résoudre ce problème.",
+  "no_public_key_activate": "Ce compte n'est pas encore activé. Cliquez pour activer et sécuriser votre compte.",
+  "no_public_key_warning": "Attention! Votre compte n'a pas de clé publique! Cela signifie que ce n'est pas aussi protégé que les autres comptes. Veuillez activer votre compte pour obtenir votre clé publique.",
   "no_purchased_products_found": "Aucun produit acheté.",
   "no_sell_orders_for_asset": "Aucun ordre de vente pour cet actif.",
   "no_trade_history": "Aucun historique d'échange disponible.",
@@ -997,7 +1001,6 @@
   "warning": "Attention",
   "website": "Site web",
   "website_or_text": "Site web ou description",
-  "welcome_to_burst": "Bienvenue sur le client Burst!",
   "with_burst": "Avec BURST",
   "wrong_pin": "Mauvais NIP",
   "x_confirmations": "__x__ confirmations",
