--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -12,6 +12,9 @@
   "account_qr_code": "Kode QR Rekening",
   "accounts": "Accounts",
   "actions": "Tindakan",
+  "activate": "Mengaktifkan",
+  "activation_failed": "Aktivasi gagal:",
+  "activation_success": "Aktivasi berhasil diminta. Akun Anda akan diaktifkan dalam beberapa saat.",
   "add_answer": "Tambahkan jawaban",
   "add_as_contact": "Tambahkan sebagai kontak",
   "add_asset": "Tambahkan aset",
@@ -632,7 +635,8 @@
   "no_polls_found": "Ada jajak pemilihan ditemukan.",
   "no_products_found": "Tidak ada Produk yang ditemukan.",
   "no_products_listed_yet": "Anda belum terdaftar produk untuk dijual, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> menambahkan satu.</a>",
-  "no_public_key_warning": "Peringatan!: akun Anda tidak memiliki kunci umum! Ini berarti itu adalah tidak seperti yang dilindungi account lainnya. Anda harus membuat transaksi outgoing untuk memperbaiki masalah ini.",
+  "no_public_key_activate": "Akun ini belum diaktifkan. Klik untuk mengaktifkan dan mengamankan akun Anda.",
+  "no_public_key_warning": "Peringatan !: Akun Anda tidak memiliki kunci publik! Ini berarti tidak terlindung dari akun lain. Silakan aktifkan akun Anda untuk mendapatkan kunci publik Anda.",
   "no_purchased_products_found": "Tidak ada produk yang dibeli telah ditemukan.",
   "no_sell_orders_for_asset": "Tidak menjual pesanan untuk aset ini.",
   "no_trade_history": "Sejarah perdagangan tidak tersedia.",
@@ -997,7 +1001,6 @@
   "warning": "Peringatan",
   "website": "Situs web",
   "website_or_text": "Situs web atau teks",
-  "welcome_to_burst": "Selamat datang di Burst!",
   "with_burst": "Dengan BURST",
   "wrong_pin": "PIN salah",
   "x_confirmations": "konfirmasi __x__",
