--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -12,6 +12,9 @@
   "account_qr_code": "Sąskaitos QR kodas",
   "accounts": "Accounts",
   "actions": "Veiksmai",
+  "activate": "Suaktyvinti",
+  "activation_failed": "Aktyvinimas nepavyko:",
+  "activation_success": "Sėkmingai paprašyta suaktyvinti. Jūsų sąskaita bus suaktyvinta po kelių akimirkų.",
   "add_answer": "Pridėti atsakymą",
   "add_as_contact": "Pridėti kontaktą",
   "add_asset": "Pridėti aktyvą",
@@ -632,7 +635,8 @@
   "no_polls_found": "Nerasta apklausų.",
   "no_products_found": "Prekių nerasta.",
   "no_products_listed_yet": "Jūs dar neturite produktų pardavimui, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> pridėkite juos.</a>",
-  "no_public_key_warning": "Įspėjimas!: Jūsų sąskaita neturi viešojo rakto! Tai reiškia, ji nėra apsaugota kaip kitos sąskaitos. Jūs turite padaryti išeinančią transakciją, kad išspręstumėte šią problemą.",
+  "no_public_key_activate": "Ši sąskaita dar nesuaktyvinta. Spustelėkite, kad suaktyvintumėte ir apsaugotumėte savo sąskaitą.",
+  "no_public_key_warning": "Įspėjimas: jūsų paskyroje nėra viešojo rakto! Tai reiškia, kad jis nėra toks apsaugotas kaip kitos sąskaitos. Aktyvuokite savo sąskaitą, kad gautumėte savo viešąjį raktą.",
   "no_purchased_products_found": "Nerasta įsigytų produktų.",
   "no_sell_orders_for_asset": "Nėra šio aktyvo pardavimo užsakymų.",
   "no_trade_history": "Prekybos istorijos nėra.",
@@ -997,7 +1001,6 @@
   "warning": "Įspėjimas",
   "website": "Tinklalapis",
   "website_or_text": "Svetainė arba tekstas",
-  "welcome_to_burst": "Sveiki atvykę į Burst!",
   "with_burst": "Su BURST",
   "wrong_pin": "Klaidingas PIN kodas",
   "x_confirmations": "__x__ patvirtinimai",
