--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -12,6 +12,9 @@
   "account_qr_code": "QR-kod konta",
   "accounts": "Accounts",
   "actions": "Działania",
+  "activate": "Aktywuj",
+  "activation_failed": "Aktywacja nie powiodła się:",
+  "activation_success": "Pomyślnie zażądano aktywacji. Twoje konto zostanie aktywowane za kilka chwil.",
   "add_answer": "Dodaj pytanie",
   "add_as_contact": "Dodaj jako kontakt",
   "add_asset": "Dodaj aktywo",
@@ -641,7 +644,8 @@
   "no_polls_found": "Nie znaleziono ankiet.",
   "no_products_found": "Nie znaleziono produktów.",
   "no_products_listed_yet": "Jeszcze nie dodałeś produktów na sprzedaż, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>dodaj produkt.</a>",
-  "no_public_key_warning": "Uwaga!: Twoje konto nie posiada klucza publicznego przez co jest gorzej zabezpieczone! Musisz wykonać transakcje wychodzącą by uzyskać klucz publiczny.",
+  "no_public_key_activate": "To konto nie zostało jeszcze aktywowane. Kliknij, aby aktywować i zabezpieczyć swoje konto.",
+  "no_public_key_warning": "Ostrzeżenie !: Twoje konto nie ma klucza publicznego! Oznacza to, że nie jest tak chroniony jak inne konta. Aktywuj swoje konto, aby uzyskać klucz publiczny.",
   "no_purchased_products_found": "Kupione produkty nie zostały znalezione.",
   "no_sell_orders_for_asset": "Brak zleceń sprzedaży dla tego aktywa.",
   "no_trade_history": "Brak historii handlu.",
@@ -1006,7 +1010,6 @@
   "warning": "Ostrzeżenie",
   "website": "Strona",
   "website_or_text": "Strona lub tekst",
-  "welcome_to_burst": "Witaj na Burst!",
   "with_burst": "Z BURST",
   "wrong_pin": "Zły kod PIN",
   "x_confirmations": "__x__ potwierdzeń",
