--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -12,6 +12,9 @@
   "account_qr_code": "Código QR da Conta",
   "accounts": "Accounts",
   "actions": "Ações",
+  "activate": "Ativar",
+  "activation_failed": "Ativação falhou:",
+  "activation_success": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
   "add_answer": "Adicionar resposta",
   "add_as_contact": "Adicionar como Contato",
   "add_asset": "Adicionar Ativo",
@@ -632,7 +635,8 @@
   "no_polls_found": "Não se encontraram enquetes.",
   "no_products_found": "Nenhum produto encontrado.",
   "no_products_listed_yet": "Ainda não colocou artigo nenhum à venda, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>adicione um.</a>",
-  "no_public_key_warning": "Aviso!: a sua conta não tem chave pública! Isto significa que ela não é tão protegida como outras contas. Você deve fazer uma transação de saída para corrigir este problema.",
+  "no_public_key_activate": "Esta conta ainda não está ativada. Clique para ativar e proteger sua conta.",
+  "no_public_key_warning": "Aviso !: Sua conta não possui uma chave pública! Isso significa que não é tão protegido quanto outras contas. Ative sua conta para obter sua chave pública.",
   "no_purchased_products_found": "Não se encontraram artigos comprados.",
   "no_sell_orders_for_asset": "Não há ordens de venda para este ativo.",
   "no_trade_history": "Não há história de operações disponível.",
@@ -997,7 +1001,6 @@
   "warning": "Aviso",
   "website": "Página Web",
   "website_or_text": "Sitio web ou Texto",
-  "welcome_to_burst": "Bem vindo a Burst!",
   "with_burst": "Com BURST",
   "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
