--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -12,6 +12,9 @@
   "account_qr_code": "Codul QR al acestui cont",
   "accounts": "Accounts",
   "actions": "Acțiuni",
+  "activate": "Activati",
+  "activation_failed": "Activarea a eșuat:",
+  "activation_success": "Activarea solicitată cu succes. Contul dvs. va fi activat în câteva momente.",
   "add_answer": "Adaugă răspuns",
   "add_as_contact": "Adauga ca persoană de Contact",
   "add_asset": "Adaugă activă",
@@ -632,7 +635,8 @@
   "no_polls_found": "Nici un sondaj găsit.",
   "no_products_found": "Nu a fost găsit niciun produs.",
   "no_products_listed_yet": "Încă nu ai listat produse de vânzare",
-  "no_public_key_warning": "Atenţie!: contul tău nu are o cheie publică! Acest lucru înseamnă că nu este protejat ca şi alte conturi. Trebuie să faci o tranzacţie de ieşire pentru a corecta problema.",
+  "no_public_key_activate": "Acest cont nu este încă activat. Faceți clic pentru a vă activa și securiza contul.",
+  "no_public_key_warning": "Avertisment !: Contul dvs. nu are o cheie publică! Acest lucru înseamnă că nu este la fel de protejat ca alte conturi. Vă rugăm să vă activați contul pentru a obține cheia publică.",
   "no_purchased_products_found": "Nu s-au găsit produse cumpărate.",
   "no_sell_orders_for_asset": "Nu sunt ordine de vânzare pentru această activă.",
   "no_trade_history": "Istorial tranzacții indisponibil.",
@@ -997,7 +1001,6 @@
   "warning": "Atenţie",
   "website": "Pagină Web",
   "website_or_text": "Pagină Web sau text",
-  "welcome_to_burst": "Bine ai venit la burst!",
   "with_burst": "Cu burst",
   "wrong_pin": "Cod PIN greșit",
   "x_confirmations": "__x__ confirmări",
