--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -12,6 +12,9 @@
   "account_qr_code": "QR-код аккаунта",
   "accounts": "Accounts",
   "actions": "Дії",
+  "activate": "Активуйте",
+  "activation_failed": "Помилка активації:",
+  "activation_success": "Активація просила успішно. Ваш рахунок буде активовано через кілька моментів.",
   "add_answer": "Додати відповідь",
   "add_as_contact": "Додати як контакт",
   "add_asset": "Додати актив",
@@ -632,7 +635,8 @@
   "no_polls_found": "Опитування не знайдено.",
   "no_products_found": "Немає жодного товару.",
   "no_products_listed_yet": "Ви ще не опублікували товари для продажу <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>додати один.</a>",
-  "no_public_key_warning": "Попередження!: ваш аккаунт не має відкритого ключа! Це означає, що ваш аккаунт не захищений належним чином. Ви повинні зробити хоч би одну витікаючу транзакцію, щоб виправити цю проблему.",
+  "no_public_key_activate": "Цей обліковий запис ще не активовано. Клацніть, щоб активувати та захистити свій обліковий запис.",
+  "no_public_key_warning": "Увага !: У вашому обліковому записі немає відкритого ключа! Це означає, що він не настільки захищений, як інші облікові записи. Будь ласка, активуйте свій обліковий запис, щоб отримати ваш відкритий ключ.",
   "no_purchased_products_found": "Куплені товари не знайдені .",
   "no_sell_orders_for_asset": "Немає заявок на продаж цього активу.",
   "no_trade_history": "Історія торгівлі не доступна.",
@@ -997,7 +1001,6 @@
   "warning": "Увага",
   "website": "Веб-сайт",
   "website_or_text": "Веб-сайт або текст",
-  "welcome_to_burst": "Ласкаво просимо в Burst!",
   "with_burst": "З BURST",
   "wrong_pin": "Неправильний PIN-код",
   "x_confirmations": "__x__ підтверджень",
