--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -12,6 +12,9 @@
   "account_qr_code": "Сметка QR код",
   "accounts": "Accounts",
   "actions": "Действие",
+  "activate": "Активирате",
+  "activation_failed": "Активирането не бе успешно:",
+  "activation_success": "Успешно заявено активиране. Вашият акаунт ще бъде активиран след няколко момента.",
   "add_answer": "Добави отговор",
   "add_as_contact": "Добави като контакт",
   "add_asset": "Добави актив",
@@ -632,7 +635,8 @@
   "no_polls_found": "Няма намерени анкети.",
   "no_products_found": "Няма намерени продукти.",
   "no_products_listed_yet": "Все още не сте вписали продукти за продажба",
-  "no_public_key_warning": "Предупреждение!: вашата сметка няма публичен ключ! Това означава, че не е защитена като други сметки. Трябва да направите изходящ превод да решите проблема.",
+  "no_public_key_activate": "Този акаунт все още не е активиран. Кликнете, за да активирате и защитите акаунта си.",
+  "no_public_key_warning": "Внимание !: Вашият акаунт няма публичен ключ! Това означава, че не е толкова защитен, колкото другите акаунти. Моля, активирайте акаунта си, за да получите публичния си ключ.",
   "no_purchased_products_found": "Не са намерени закупени продукти.",
   "no_sell_orders_for_asset": "Няма поръчки за продажба за този актив.",
   "no_trade_history": "Няма история на търговията.",
@@ -997,7 +1001,6 @@
   "warning": "Предупреждение",
   "website": "Уебсайт",
   "website_or_text": "Уебсайт или текст",
-  "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
   "wrong_pin": "Грешен ПИН",
   "x_confirmations": "__x__ потвърждения",
