--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -12,6 +12,9 @@
   "account_qr_code": "Konto-QR-Code",
   "accounts": "Accounts",
   "actions": "Aktionen",
+  "activate": "Aktivieren",
+  "activation_failed": "Aktivierung fehlgeschlagen:",
+  "activation_success": "Aktivierung erfolgreich angefordert. Ihr Konto wird in wenigen Augenblicken aktiviert.",
   "add_answer": "Antwort hinzufügen",
   "add_as_contact": "Als Kontakt hinzufügen",
   "add_asset": "Asset hinzufügen",
@@ -632,7 +635,8 @@
   "no_polls_found": "Keine Abstimmungen gefunden.",
   "no_products_found": "Keine Artikel gefunden.",
   "no_products_listed_yet": "Keine Artikel zum Kauf angeboten. <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>Bieten Sie eins an.</a>",
-  "no_public_key_warning": "Warnung!: Ihr Benutzerkonto besitzt keinen öffentlichen Schlüssel! Dies bedeutet, dass es ungenügend geschützt ist. Erstellen Sie eine ausgehende Transaktion um dieses Problem zu beheben.",
+  "no_public_key_activate": "Dieser Account ist noch nicht aktiviert. Klicken Sie hier, um Ihr Konto zu aktivieren und zu sichern.",
+  "no_public_key_warning": "Warnung !: Ihr Konto hat keinen öffentlichen Schlüssel! Dies bedeutet, dass es nicht so geschützt ist wie andere Konten. Bitte aktivieren Sie Ihr Konto, um Ihren öffentlichen Schlüssel zu erhalten.",
   "no_purchased_products_found": "Keine gekauften Artikel gefunden.",
   "no_sell_orders_for_asset": "Keine Verkaufsorders für dieses Asset.",
   "no_trade_history": "Keine Handelshistorie verfügbar.",
@@ -997,7 +1001,6 @@
   "warning": "Warnung",
   "website": "Webseite",
   "website_or_text": "Webseite oder Text",
-  "welcome_to_burst": "Willkommen bei Burst!",
   "with_burst": "Mit BURST",
   "wrong_pin": "Falsche PIN",
   "x_confirmations": "__x__ Bestätigungen",
