--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -12,6 +12,9 @@
   "account_qr_code": "QR Kod Računa",
   "accounts": "Accounts",
   "actions": "Akcije",
+  "activate": "Aktivirati",
+  "activation_failed": "Aktivacija nije uspjela:",
+  "activation_success": "Aktiviranje je uspješno. Vaš će račun biti aktiviran za nekoliko trenutaka.",
   "add_answer": "Dodaj odgovor",
   "add_as_contact": "Dodaj u kontakte",
   "add_asset": "Dodaj asset",
@@ -632,7 +635,8 @@
   "no_polls_found": "Ankete nisu pronađene.",
   "no_products_found": "Proizvodi nisu pronađeni.",
   "no_products_listed_yet": "Još niste ponudili ni jedan proizvod na prodaju, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>dodajte jedan.</a>",
-  "no_public_key_warning": "Upozorenje!: Vaš račun ne posjeduje javni ključ!! To znači da nije zaštičen kao ostali računi. Morate izvršiti jednu transakciju prema van kako biste ispravili taj problem.",
+  "no_public_key_activate": "Ovaj račun još nije aktiviran. Kliknite da biste aktivirali i osigurali svoj račun.",
+  "no_public_key_warning": "Upozorenje !: Vaš račun nema javni ključ! To znači da nije zaštićen kao drugi računi. Aktivirajte svoj račun da biste dobili svoj javni ključ.",
   "no_purchased_products_found": "Nema pronađenih kupljenih proizvoda.",
   "no_sell_orders_for_asset": "Nema prodajnih naloga za ovaj asset.",
   "no_trade_history": "Povijest trgovanja ne postoji.",
@@ -997,7 +1001,6 @@
   "warning": "Upozorenje",
   "website": "Website",
   "website_or_text": "Website ili tekst",
-  "welcome_to_burst": "Dobrodošli u Burst!",
   "with_burst": "Sa BURST",
   "wrong_pin": "Pogrešan PIN",
   "x_confirmations": "__x__ potvrda",
