--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -12,6 +12,9 @@
   "account_qr_code": "QR-код аккаунта",
   "accounts": "Accounts",
   "actions": "Действия",
+  "activate": "Активировать",
+  "activation_failed": "Активация не удалось:",
+  "activation_success": "Успешно запрошена активация. Ваш аккаунт будет активирован через несколько секунд.",
   "add_answer": "Добавить Ответ",
   "add_as_contact": "Добавить контакт",
   "add_asset": "Добавить актив",
@@ -632,7 +635,8 @@
   "no_polls_found": "Опросов не найдено.",
   "no_products_found": "Товары не найдены.",
   "no_products_listed_yet": "Вы еще не опубликовали товары для продажи, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> добавить один.</a>",
-  "no_public_key_warning": "Предупреждение!: ваш аккаунт не имеет открытого ключа! Это означает, что ваш аккаунт не защищен должным образом. Вы должны сделать хотя бы одну исходящую транзакцию, чтобы исправить эту проблему.",
+  "no_public_key_activate": "Этот аккаунт еще не активирован. Нажмите, чтобы активировать и защитить свой аккаунт.",
+  "no_public_key_warning": "Внимание !: У вашего аккаунта нет открытого ключа! Это означает, что он не так защищен, как другие учетные записи. Пожалуйста, активируйте свою учетную запись, чтобы получить ваш открытый ключ.",
   "no_purchased_products_found": "Купленные товары не найдены .",
   "no_sell_orders_for_asset": "Нет заявок на продажу этого актива.",
   "no_trade_history": "История торговли не доступна.",
@@ -997,7 +1001,6 @@
   "warning": "Внимание",
   "website": "Вебсайт",
   "website_or_text": "Веб-сайт или текст",
-  "welcome_to_burst": "Добро пожаловать в Burst!",
   "with_burst": "С BURST",
   "wrong_pin": "Неверный PIN-код",
   "x_confirmations": "__x__ подтверждений",
