--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -12,6 +12,9 @@
   "account_qr_code": "QR Kod Naloga",
   "accounts": "Accounts",
   "actions": "Akcije",
+  "activate": "Активирати",
+  "activation_failed": "Активација није успела:",
+  "activation_success": "Активирање је успешно. Ваш рачун ће се активирати за неколико тренутака.",
   "add_answer": "Dodaj Odgovor",
   "add_as_contact": "Dodaj u Kontakte",
   "add_asset": "Dodajte Asset",
@@ -594,7 +597,8 @@
   "no_polls_found": "Ankete nisu pronađenje.",
   "no_products_found": "Proizvodi nisu pronađeni.",
   "no_products_listed_yet": "Niste ponudili nijedan proizvod na prodaju, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>dodajte jedan.</a>",
-  "no_public_key_warning": "Pažnja!</strong>: Vaš nalog ne poseduje javni ključ! Vaš nalog nije zaštićen kao drugi nalozi. Morate izvršiti 1 odlazeću transakciju da biste popravili ovaj problem.",
+  "no_public_key_activate": "Овај налог још није активиран. Кликните да бисте активирали и заштитили свој налог.",
+  "no_public_key_warning": "Упозорење !: Ваш налог нема јавни кључ! То значи да није заштићен као остали рачуни. Молимо активирајте свој рачун да бисте добили свој јавни кључ.",
   "no_purchased_products_found": "Nema nađenih kupljenih proizvoda.",
   "no_sell_orders_for_asset": "Nema prodajnih naloga za ovaj asset.",
   "no_trade_history": "Istorija trgovanja ne postoji.",
@@ -927,7 +931,6 @@
   "warning": "Upozorenje",
   "website": "Vebsajt",
   "website_or_text": "Web sajt ili Tekst",
-  "welcome_to_burst": "Dobrodošli u Burst!",
   "with_burst": "Sa BURST-om",
   "x_confirmations": "__x__ konfirmacija",
   "yes": "Da",
