--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Изберете цветова схема",
   "select_contact_in_sidebar": "Моля изберете контакт в лявата лента.",
   "select_node": "Изберете Node",
+  "select_node_description": "Изберете връстника, с който искате да се свържете. Можете да използвате предложен партньор, но също така можете да въведете произволен URL адрес на партньор.",
   "select_recipients": "Изберете Получатели",
   "sell": "Продай",
   "sell_alias": "Продай псевдоним",
