--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Επιλέξτε χρώμα σχεδίου",
   "select_contact_in_sidebar": "Please select a contact in the left sidebar.",
   "select_node": "Επιλέξτε Κόμβο",
+  "select_node_description": "Επιλέξτε τον συνομιλητή με τον οποίο θέλετε να συνδεθείτε. Μπορείτε να χρησιμοποιήσετε έναν προτεινόμενο ιστότοπο, αλλά μπορεί επίσης να εισαγάγετε μια αυθαίρετη url url.",
   "select_recipients": "Επιλέξτε Παραλήπτες",
   "sell": "Πωληση",
   "sell_alias": "Πώληση ψευδώνυμου",
