--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "रंग योजना का चयन करें",
   "select_contact_in_sidebar": "कृपया बाईं साइडबार में एक संपर्क का चयन करें।",
   "select_node": "नोड चुनें",
+  "select_node_description": "वह सहकर्मी चुनें जिसे आप कनेक्ट करना चाहते हैं। आप एक सुझाए गए सहकर्मी का उपयोग कर सकते हैं, लेकिन एक मनमाना सहकर्मी url भी दर्ज कर सकते हैं।",
   "select_recipients": "प्राप्तकर्ता का चयन करें",
   "sell": "बेचें",
   "sell_alias": "उपनाम बेचें",
