--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Выберите цветовую схему",
   "select_contact_in_sidebar": "Пожалуйста, выберите контакт в левой боковой панели.",
   "select_node": "Выберите узел",
+  "select_node_description": "Выберите узел, к которому хотите подключиться. Вы можете использовать предложенный одноранговый узел, но также можете ввести произвольный URL-адрес однорангового узла.",
   "select_recipients": "Выберите получателей",
   "sell": "Продать",
   "sell_alias": "Продать псевдоним",
