--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Виберіть колірну схему",
   "select_contact_in_sidebar": "Будь ласка, виберіть контакт у лівій бічній панелі.",
   "select_node": "Виберіть Node",
+  "select_node_description": "Виберіть однорангового партнера, з яким потрібно підключитися. Ви можете використовувати запропонований аналог, але також можете ввести довільну URL-адресу однорангової програми.",
   "select_recipients": "Виберіть Одержувачі",
   "sell": "Продати",
   "sell_alias": "Продати Альяс",
