--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Seleccioneu el Color del Disseny",
   "select_contact_in_sidebar": "Si us plau seleccioneu un contacte a la barra de l'esquerra.",
   "select_node": "Trieu el node",
+  "select_node_description": "Seleccioneu el parell al qual voleu connectar-vos. Podeu utilitzar un parell suggerit, però també podeu introduir una URL de parells arbitrària.",
   "select_recipients": "Seleccioneu Destinataris",
   "sell": "Vendre",
   "sell_alias": "Vender Àlies",
