--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Vyberte barevné schéma",
   "select_contact_in_sidebar": "Vyberte prosím kontakt z lišty vlevo.",
   "select_node": "Zvolte Uzel",
+  "select_node_description": "Vyberte partnera, ke kterému se chcete připojit. Můžete použít navrhovaný peer, ale můžete také zadat libovolnou adresu URL peer.",
   "select_recipients": "Vyberte Příjemci",
   "sell": "Prodat",
   "sell_alias": "Prodat alias",
