--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Valitse väriteema",
   "select_contact_in_sidebar": "Valitse yhteystieto vasemmasta sivupalkista.",
   "select_node": "Valitse Solmu",
+  "select_node_description": "Valitse vertaisverkko, johon haluat muodostaa yhteyden. Voit käyttää ehdotettua vertaisverkkoa, mutta voit myös kirjoittaa mielivaltaisen vertaisosoitteen.",
   "select_recipients": "Valitse Vastaanottajat",
   "sell": "Myy",
   "sell_alias": "Myy alias",
