--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Sélectionnez la couleur du thème",
   "select_contact_in_sidebar": "Merci de choisir un contact dans le volet gauche.",
   "select_node": "Choisissez un nœud",
+  "select_node_description": "Sélectionnez l'homologue auquel vous souhaitez vous connecter. Vous pouvez utiliser un homologue suggéré, mais vous pouvez également entrer une URL homologue arbitraire.",
   "select_recipients": "Sélectionner les destinataires",
   "sell": "Vendre",
   "sell_alias": "Vendre l'alias",
