--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Odaberite shemu boje",
   "select_contact_in_sidebar": "Molimo odaberite kontakt u lijevom stupcu.",
   "select_node": "Odaberite Čvor",
+  "select_node_description": "Odaberite vršnjak s kojim se želite povezati. Možete koristiti predloženi peer, ali možete unijeti i proizvoljni peer url.",
   "select_recipients": "Odaberite Primatelji",
   "sell": "Prodaj",
   "sell_alias": "Prodaj pseudonime",
