--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Odaberite shemu boje",
   "select_contact_in_sidebar": "Molimo odaberite kontakt u lijevom stupcu.",
   "select_node": "Select Node",
+  "select_node_description": "",
   "select_recipients": "",
   "sell": "Prodaj",
   "sell_alias": "Prodaj pseudonime",
