--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Vybrať farebnú škálu",
   "select_contact_in_sidebar": "V ľavom paneli vyberte kontakt.",
   "select_node": "Vyberte Uzol",
+  "select_node_description": "Vyberte partnera, s ktorým sa chcete spojiť. Môžete použiť odporúčané peer, ale môžete tiež zadať ľubovoľnú adresu URL.",
   "select_recipients": "Vyberte Príjemcovia",
   "sell": "Predať",
   "sell_alias": "Predať Alias",
