--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -803,6 +803,7 @@
   "select_color_scheme": "Изаберите Схему Боје",
   "select_contact_in_sidebar": "Молимо одаберите контакт у левој колони.",
   "select_node": "Изаберите Ноде",
+  "select_node_description": "Одаберите вршњак са којим желите да се повежете. Можете користити предложени пеер, али можете и унети произвољни пеер урл.",
   "select_recipients": "Изаберите примаоци",
   "sell": "Продај",
   "sell_alias": "Продајте Алиас",
