fix(app): add disabled ability, fix copy feature, style multi outs

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -33,7 +33,8 @@
         "noTransactions": {
           "title": "No transactions"
         },
-        "copiedSuccessfully": "Address copied successfully."
+        "copiedSuccessfully": "Address copied successfully.",
+        "copy": "Copy"
       },
       "addAccount": {
         "createAccount": "Create account",
