--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -33,7 +33,8 @@
         "noTransactions": {
           "title": "Нет транзакций"
         },
-        "copiedSuccessfully": "Address copied successfully."
+        "copiedSuccessfully": "Address copied successfully.",
+        "copy": "Copy"
       },
       "addAccount": {
         "addAccount": "Добавить аккаунт",
