feat(mobile): add forgot PIN option to PIN screen

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -9,7 +9,9 @@
     },
     "modals": {
       "enterPasscode": {
-        "passcodeHint": "Enter passcode"
+        "passcodeHint": "Enter passcode",
+        "forgotPin": "Forgot PIN?",
+        "confirmReset": "Remove all accounts and reset PIN?"
       },
       "setPasscode": {
         "enterAgain": "Enter passcode again",
